changed CSS to make sure frog is visible ar all times

--- a/styles.css
+++ b/styles.css
@@ -19,16 +19,6 @@
     background-color: blue;
 }
 
-/*
-.log-left, .log-right {
-    background-color: lightblue;
-}
-*/
-
-.frog {
-    background-color: green;
-}
-
 .l1, .l2, .l3 {
     background-color: brown;
 }
@@ -43,4 +33,8 @@
 
 .c2, .c3 {
     background-color: lightgrey;
+}
+
+.frog {
+    background-color: green;
 }
